--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,10 +1,6 @@
 /*
 |-------------------------------------------------------------------------
-| Be
-| Global style
-| version 7.6
-| http://BeantownThemes.com
-| http://themeforest.net/user/BeantownThemes
+| 
 |--------------------------------------------------------------------------
 | 1.0 Base
 | 2.0 Buttons
